домашнее задание к 5 уроку (Spring Cloud. Часть 1)

--- a/ms-product/pom.xml
+++ b/ms-product/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>core-lib</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>ru.geekbrains.boot</groupId>
+            <artifactId>spring-boot-project</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
