--- a/ms-order/pom.xml
+++ b/ms-order/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>core-lib</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>ru.geekbrains.myShop</groupId>
+            <artifactId>routing-lib</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
