--- a/ms-order/src/main/resources/application.yaml
+++ b/ms-order/src/main/resources/application.yaml
@@ -1,9 +1,11 @@
 server:
-  port: 8189
+  port: 0
   servlet:
     context-path: /orders
 
 spring:
+  application:
+    name: ms-order
   flyway:
     baseline-on-migrate: true
     locations: classpath:db/migration
@@ -24,3 +26,11 @@ spring:
       enabled: true
       settings:
         web-allow-others: false
+
+eureka:
+  client:
+    service-url:
+      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+
+jwt:
+  secret: asdgfsdgadfghnbadfgfdgh
