--- a/ms-user/src/main/resources/application.yaml
+++ b/ms-user/src/main/resources/application.yaml
@@ -4,6 +4,8 @@ server:
     context-path: /users
 
 spring:
+  application:
+    name: ms-user
   flyway:
     baseline-on-migrate: true
     locations: classpath:db/migration
@@ -24,5 +26,11 @@ spring:
       enabled: true
       settings:
         web-allow-others: false
+
+eureka:
+  client:
+    service-url:
+      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+
 jwt:
   secret: asdgfsdgadfghnbadfgfdgh
