--- a/routing-lib/pom.xml
+++ b/routing-lib/pom.xml
@@ -13,7 +13,17 @@
     <name>routing-lib</name>
 
     <dependencies>
-
+        <dependency>
+            <groupId>ru.geekbrains.myShop</groupId>
+            <artifactId>core-lib</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.geekbrains.myShop</groupId>
+            <artifactId>product</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
