--- a/ms-payment/src/main/resources/application.yml
+++ b/ms-payment/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
   application:
-    name: ms-order
+    name: ms-payment
   flyway:
     baseline-on-migrate: true
     locations: classpath:db/migration
@@ -28,7 +28,3 @@ eureka:
   client:
     service-url:
       default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
-    fetch-registry: true
-
-jwt:
-  secret: asdgfsdgadfghnbadfgfdgh
