--- a/ms-user/src/main/resources/application.yaml
+++ b/ms-user/src/main/resources/application.yaml
@@ -1,11 +1,9 @@
-server:
-  port: 0
-  servlet:
-    context-path: /users
-
 spring:
+  config:
+    import: optional:configserver:http://localhost:8888
   application:
     name: ms-user
+
   flyway:
     baseline-on-migrate: true
     locations: classpath:db/migration
