домашнее задание к 11 уроку

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <module>routing-lib</module>
 
         <module>eureka-server</module>
+
+        <module>front-server</module>
     </modules>
 
     <dependencies></dependencies>
