--- a/core-lib/pom.xml
+++ b/core-lib/pom.xml
@@ -16,6 +16,8 @@
     <properties>
         <io-jwt.version>0.9.1</io-jwt.version>
         <springdoc-ui.version>1.5.10</springdoc-ui.version>
+        <model-mapper.version>2.3.5</model-mapper.version>
+        <jedis-client.version>3.3.0</jedis-client.version>
     </properties>
 
     <dependencies>
@@ -68,22 +70,15 @@
             <version>${springdoc-ui.version}</version>
         </dependency>
 
-        <!-- AOP -->
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.9.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.3.9</version>
-        </dependency>
-
         <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis-client.version}</version>
         </dependency>
 
         <!-- cloud -->
@@ -94,6 +89,13 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- ModelMapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${model-mapper.version}</version>
         </dependency>
 
     </dependencies>
