--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -5,3 +5,8 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+
+spring:
+  cloud:
+    config:
+      uri: http://localhost:8081
