--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -9,15 +9,11 @@
     </parent>
     <groupId>ru.geekbrains.myShop</groupId>
     <artifactId>gateway-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>gateway-server</name>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <dependency>
+       <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>3.0.3</version>
