--- a/ms-order/pom.xml
+++ b/ms-order/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>ru.geekbrains.myShop</groupId>
     <artifactId>order</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>ms-order</name>
 
     <dependencies>
