--- a/ms-payment/src/main/resources/application.yml
+++ b/ms-payment/src/main/resources/application.yml
@@ -3,28 +3,5 @@ spring:
     import: optional:configserver:http://localhost:8888
   application:
     name: ms-payment
-  flyway:
-    baseline-on-migrate: true
-    locations: classpath:db/migration
 
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:mydatabase;MODE=PostgreSQL
-    username: Evengarr
-    password:
-
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: false
-
-eureka:
-  client:
-    service-url:
-      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+#  остальной код тут https://github.com/Evengarr/myShop/edit/master/ms-payment.yml
