--- a/ms-product/src/main/resources/application.yaml
+++ b/ms-product/src/main/resources/application.yaml
@@ -3,31 +3,6 @@ spring:
     import: optional:configserver:http://localhost:8888
   application:
     name: ms-product
-  flyway:
-    baseline-on-migrate: true
-    locations: classpath:db/migration
 
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:mydatabase;MODE=PostgreSQL
-    username: Evengarr
-    password:
 
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: false
-
-eureka:
-  client:
-    service-url:
-      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
-
-jwt:
-  secret: asdgfsdgadfghnbadfgfdgh
+# остальной код https://github.com/Evengarr/myShop/edit/master/ms-product.yml
