--- a/routing-lib/pom.xml
+++ b/routing-lib/pom.xml
@@ -24,6 +24,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.geekbrains.myShop</groupId>
+            <artifactId>user</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
